--- a/html/index.html
+++ b/html/index.html
@@ -135,8 +135,8 @@
     </div>
   </section>
   <section id="precos" class="white-bg section">
-    <div class="main-content top3-content">
-      <h2>
+    <div class="main-content top3-content title">
+      <h2 class="title">
         Pricing
       </h2>
       <p>
