--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the:focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
       </div>
       <div class="intro-img">
-        <img src="../html/assets/img/javascript.svg" alt="imagem exemplo">
+        <img src="../assets/img/javascript.svg" alt="imagem exemplo">
       </div>
     </div>
   </section>
@@ -210,7 +210,7 @@
         <p>Are you interested in our work and our prices? Look for us, tell us about your project and how we can help you. We are interested in sending you a proposal to develop it and thereby leverage your dream. </p>
       </div>
       <div>
-        <img src="../html/assets/img/contact.svg" alt="imagem exemplo">
+        <img src="../assets/img/contact.svg" alt="imagem exemplo">
       </div>      
       <div class="contact-form">
         <fieldset class="form-grid">
